Changed spacing + more repairs to archive.php

--- a/css/ui.scss
+++ b/css/ui.scss
@@ -463,7 +463,7 @@ input[type=password] {
 		$back_to_top_size: $inuit-base-spacing-unit * 2;
 
 		position: absolute;
-		top: 205vh; 
+		top: 220vh; 
 		bottom: auto;
 		right: 0;
 		margin-right: 5%;
