--- a/style.css
+++ b/style.css
@@ -2172,7 +2172,7 @@ textarea {
 
 .back-to-top {
   position: absolute;
-  top: 205vh;
+  top: 220vh;
   bottom: auto;
   right: 0;
   margin-right: 5%; }
